@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 17-04-2005 fixed: PAPlayer seeking was way too fast.
+  - 17-04-2005 fixed: Time display in VBR files after seeking is now more accurate.
+  - 17-04-2005 fixed: .Cue sheet sort order in sort by files.
   - 17-04-2005 added: Better VBR seeking for PaPlayer.
   - 17-04-2005 fixed: AudioScrobbler submission on .cue sheet items was wrong.
   - 17-04-2005 changed: Skin version hits v1.3.
